--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,32 +24,28 @@ const projects = (await getCollection("projects"))
 <PageLayout title={HOME.TITLE} description={HOME.DESCRIPTION}>
   <Container>
     <h4 class="animate font-semibold text-black dark:text-white">
-      Hi, I'm Nano <span class="text-xl">👋🏻</span> 
+      Hi, I'm Seungyong <span class="text-xl">👋🏻</span> 
     </h4>
     <div class="space-y-16">
       <section>
         <article class="space-y-4">
           <p class="animate">
-            I am a minimal, seo friendly, accessible portfolio and blog for developers. 
-            I am an even more lightweight version of my popular theme
-            <Link href="https://github.com/markhorn-dev/astro-sphere" aria-label="Astro Sphere on Github" external>
-              Astro Sphere
-            </Link>.
-            I have a lighthouse scores of 100 across the board for performance, 
-            accesibility, best practices and SEO.
+            <span class="font-semibold text-black dark:text-white">Student @SKKU, Software Engineer</span>
           </p>
           <p class="animate">
-            I come packed with full type safety, a sitemap, an rss feed, markdown 
-            and mdx support (use components in your markdown) through astro integrations.
-            I am styled with tailwind and come preconfigured with light, dark and 
-            system/os theme preferences out of the box.
+            Currently serving as an Information Security Soldier in the Republic of Korea Army (2025.01 ~).
+            Previously developed mobile apps for local community problem solving at SKKU and worked on Generative AI Math Problem Creation at Woongjin ThinkBig.
+            Passionate about Flutter, Node.js, and Python.
           </p>
           <p class="animate">
-            Visit
-            <Link href="https://github.com/markhorn-dev/astro-nano" aria-label="Astro Nano on Github" external>
-              Astro Nano on Github
-            </Link>
-            to fork the repository, read the docs or one-click deploy on Vercel or Netlify. 
+            Creator of 
+            <Link href="/skkubus" aria-label="SKKUBUS Project">
+              SKKUBUS
+            </Link>, 
+            a shuttle bus app used by 50% of SKKU students.
+          </p>
+          <p class="animate">
+             Winner of Hyundai AutoEver Barrier-Free App Contest (Grand Prize) and 2020 Data Creator Camp (Grand Prize).
           </p>
         </article>
       </section>
